==> LIoyd7/Omnitrix/User/device/lcd_init.c <==
#include "lcd_init.h"
#include "bsp/bsp_delay.h"
#include "spi.h"
#include "tim.h"

/******************************************************************************
  函数说明: LCD 引脚初始化
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_GPIO_Init(void)
{
	GPIO_InitTypeDef GPIO_InitStructure = {0};

	__HAL_RCC_GPIOB_CLK_ENABLE();

	GPIO_InitStructure.Pin = RES_PIN | CS_PIN | DC_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;		  // 推挽输出
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH; // 高速 50MHz
	HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);			  // 初始化 GPIOB
	HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);			  // 初始化 GPIOA
	HAL_GPIO_WritePin(GPIOB, RES_PIN | CS_PIN | DC_PIN, GPIO_PIN_SET);
}

/******************************************************************************
  函数说明: LCD 数据写入 (软件 SPI)
  输入参数: dat 要写入的数据
  返回值  : 无
******************************************************************************/
void LCD_Writ_Bus(uint8_t dat)
{
	// 硬件 SPI
	HAL_SPI_Transmit(&hspi1, &dat, 1, 1);

	// 软件 SPI 示例
	/*
	u8 i;
	for(i = 0; i < 8; i++)
	{
		LCD_SCLK_Clr();
		if(dat & 0x80)
		{
			LCD_MOSI_Set();
		}
		else
		{
			LCD_MOSI_Clr();
		}
		LCD_SCLK_Set();
		dat <<= 1;
	}
	*/
}

/******************************************************************************
  函数说明: LCD 写 8 位数据
  输入参数: dat 写入的数据
  返回值  : 无
******************************************************************************/
void LCD_WR_DATA8(uint8_t dat)
{
	LCD_Writ_Bus(dat);
}

/******************************************************************************
  函数说明: LCD 写 16 位数据
  输入参数: dat 写入的数据
  返回值  : 无
******************************************************************************/
void LCD_WR_DATA(uint16_t dat)
{
	uint8_t temp[2];
	temp[0] = (dat >> 8) & 0xFF;
	temp[1] = dat & 0xFF;
	HAL_SPI_Transmit(&hspi1, temp, 2, 1);
}

/******************************************************************************
  函数说明: LCD 写寄存器
  输入参数: dat 写入的数据
  返回值  : 无
******************************************************************************/
void LCD_WR_REG(uint8_t dat)
{
	LCD_DC_Clr(); // 写寄存器
	LCD_Writ_Bus(dat);
	LCD_DC_Set();
}

/******************************************************************************
  函数说明: 设置 LCD 显示区域
  输入参数: x1,x2 起始和结束列
			y1,y2 起始和结束行
  返回值  : 无
******************************************************************************/
void LCD_Address_Set(uint16_t x1, uint16_t y1, uint16_t x2, uint16_t y2)
{
	LCD_WR_REG(0x2a); // 列地址设置
	LCD_WR_DATA(x1);
	LCD_WR_DATA(x2);
	LCD_WR_REG(0x2b); // 行地址设置
	LCD_WR_DATA(y1);
	LCD_WR_DATA(y2);
	LCD_WR_REG(0x2c); // 写内存
}

/******************************************************************************
  函数说明: 设置 LCD 背光亮度
  输入参数: dc, 范围 5%~100%
  返回值  : 无
******************************************************************************/
void LCD_Set_Light(uint8_t dc)
{
	if (dc >= 5 && dc <= 100)
		__HAL_TIM_SetCompare(&htim1, TIM_CHANNEL_1, dc * PWM_PERIOD / 100);
}

/******************************************************************************
  函数说明: 关闭 LCD 背光
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_Close_Light(void)
{
	__HAL_TIM_SetCompare(&htim1, TIM_CHANNEL_1, 0);
}

/******************************************************************************
  函数说明: 打开 LCD 背光
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_Open_Light(void)
{
	HAL_TIM_PWM_Start(&htim1, TIM_CHANNEL_1);
}

/******************************************************************************
  函数说明: ST7789 进入休眠模式
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_ST7789_SleepIn(void)
{
	LCD_WR_REG(0x10);
	delay_ms(100);
}

/******************************************************************************
  函数说明: ST7789 退出休眠模式
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_ST7789_SleepOut(void)
{
	LCD_WR_REG(0x11);
	delay_ms(100);
}

/******************************************************************************
  函数说明: LCD 初始化
  输入参数: 无
  返回值  : 无
******************************************************************************/
void LCD_Init(void)
{
	LCD_GPIO_Init(); // 初始化 GPIO
	LCD_CS_Clr();	 // Chip select

	LCD_RES_Clr(); // 复位
	delay_ms(100);
	LCD_RES_Set();
	delay_ms(100);

	LCD_WR_REG(0x11);
	delay_ms(120);
	LCD_WR_REG(0x36);
	if (USE_HORIZONTAL == 0)
		LCD_WR_DATA8(0x00);
	else if (USE_HORIZONTAL == 1)
		LCD_WR_DATA8(0xC0);
	else if (USE_HORIZONTAL == 2)
		LCD_WR_DATA8(0x70);
	else
		LCD_WR_DATA8(0xA0);

	LCD_WR_REG(0x3A);
	LCD_WR_DATA8(0x05);

	LCD_WR_REG(0xB2);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x00);
	LCD_WR_DATA8(0x33);
	LCD_WR_DATA8(0x33);

	LCD_WR_REG(0xB7);
	LCD_WR_DATA8(0x35);

	LCD_WR_REG(0xBB);
	LCD_WR_DATA8(0x19);

	LCD_WR_REG(0xC0);
	LCD_WR_DATA8(0x2C);

	LCD_WR_REG(0xC2);
	LCD_WR_DATA8(0x01);

	LCD_WR_REG(0xC3);
	LCD_WR_DATA8(0x12);

	LCD_WR_REG(0xC4);
	LCD_WR_DATA8(0x20);

	LCD_WR_REG(0xC6);
	LCD_WR_DATA8(0x0F);

	LCD_WR_REG(0xD0);
	LCD_WR_DATA8(0xA4);
	LCD_WR_DATA8(0xA1);

	LCD_WR_REG(0xE0);
	LCD_WR_DATA8(0xD0);
	LCD_WR_DATA8(0x04);
	LCD_WR_DATA8(0x0D);
	LCD_WR_DATA8(0x11);
	LCD_WR_DATA8(0x13);
	LCD_WR_DATA8(0x2B);
	LCD_WR_DATA8(0x3F);
	LCD_WR_DATA8(0x54);
	LCD_WR_DATA8(0x4C);
	LCD_WR_DATA8(0x18);
	LCD_WR_DATA8(0x0D);
	LCD_WR_DATA8(0x0B);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x23);

	LCD_WR_REG(0xE1);
	LCD_WR_DATA8(0xD0);
	LCD_WR_DATA8(0x04);
	LCD_WR_DATA8(0x0C);
	LCD_WR_DATA8(0x11);
	LCD_WR_DATA8(0x13);
	LCD_WR_DATA8(0x2C);
	LCD_WR_DATA8(0x3F);
	LCD_WR_DATA8(0x44);
	LCD_WR_DATA8(0x51);
	LCD_WR_DATA8(0x2F);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x1F);
	LCD_WR_DATA8(0x20);
	LCD_WR_DATA8(0x23);

	LCD_WR_REG(0x21);
	LCD_WR_REG(0x29);
}
